Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/layouts/_banner.html.erb
+++ b/source/layouts/_banner.html.erb
@@ -2,6 +2,6 @@
   <div class="banner-content">
     <h1>Welcome Home</h1>
     <p>Book Unique Homes and Experience a City like a Local.</p>
-    <a class="btn btn-primary btn-lg">Search</a>
+    <a class="btn btn-info btn-lg">Search</a>
   </div>
 </div>
