--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -1,10 +1,11 @@
-h1 {
-  text-align: center;
-  padding-bottom: 1%;
-}
 .container-flats {
   margin-top: 7%;
   margin-bottom: 5%;
+  h1 {
+    text-align: center;
+    padding-bottom: 1%;
+    color: $black;
+  }
 }
 
 .card {
@@ -12,8 +13,9 @@ h1 {
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
-  color: white;
+  color: $white;
   position: relative;
+  border-radius: 5px;
   box-shadow: 0px 0px 68px -20px rgba(0,0,0,0.75);
 }
 .card-user {
@@ -50,7 +52,7 @@ h1 {
   right: 0;
   width: 100%;
   z-index: 2;
-  background: black;
+  background: $black;
   opacity: 0;
 }
 .card-link:hover {
