--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,15 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
+$red: #690500;
+$blue: #003249;
+$yellow: #E59500;
+$orange: #D1603D;
+$green: #43AA8B;
+$gray: #435058;
 $light-gray: #F4F4F4;
+
+$heart-red: #C41D2B;
+$white: #F4F4F4;
+$black: #010202;
+$spanish-gray: #E6E6E6;
