--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -1,9 +1,8 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-
-// Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Karla:400,700');// Define fonts for body and headers
+$body-font: "Fjalla", "Karla", "Open Sans", "Helvetica", "sans-serif";
+$headers-font: "Fjalla", "Raleway", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
